--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,17 +20,14 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.14.2
+    rev: v0.14.4
     hooks:
-      - id: ruff
-        name: Ruff lint
+      - id: ruff-check
         args: [--fix, --exit-non-zero-on-fix, --show-fixes]
-      - id: ruff
-        name: Ruff format
-        entry: ruff format
+      - id: ruff-format
 
   - repo: https://github.com/tox-dev/pyproject-fmt
-    rev: "v2.11.0"
+    rev: v2.11.1
     hooks:
       - id: pyproject-fmt
 
@@ -45,7 +42,7 @@ repos:
         - pyjson5==2.0.0
 
   - repo: https://github.com/astral-sh/uv-pre-commit
-    rev: "0.9.5"
+    rev: 0.9.8
     hooks:
       - id: uv-lock
       - id: uv-sync
